09-kubernetes/06-despliegue-local/backend1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1
  labels:
    app: backend1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend1
  template:
    metadata:
      labels:
        app: backend1
    spec:
      containers:
        - name: backend1-pod
          image: localhost:5000/backend1
          imagePullPolicy: Always
          ports:
            - containerPort: 3010
