09-kubernetes/06-despliegue-local/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-pod
          image: localhost:5000/frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
